test/JDBC/expected/BABEL-662.out
-- BABEL-662
CREATE TABLE babel_662_table (x INT, y FLOAT, z VARCHAR(10));
go

CREATE PROC babel_662_proc_1 AS SELECT 'hi'
go

CREATE PROC babel_662_proc_2 @p VARCHAR(50) AS SELECT @p
go

CREATE PROC babel_662_proc_3
(
	@a INT,
	@b FLOAT,
	@c VARCHAR(10)
)
AS INSERT INTO babel_662_table VALUES (@a, @b, @c);
go

babel_662_proc_1
go
~~START~~
varchar
hi
~~END~~


babel_662_proc_2 'hello'
go
~~START~~
varchar
hello
~~END~~


babel_662_proc_2 'hello again'
go
~~START~~
varchar
hello again
~~END~~


babel_662_proc_3 1, 1.1, 'one';
go
~~ROW COUNT: 1~~


babel_662_proc_3 @a = 2, @b = 2.2, @c = 'two';
go
~~ROW COUNT: 1~~


babel_662_proc_3 3, @b = 3.3, @c = 'three';
go
~~ROW COUNT: 1~~


babel_662_proc_3 4, @b = 4.4, 'four';  -- invalid
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ''four'' at line 1 and character position 30)~~


SELECT * FROM babel_662_table;
go
~~START~~
int#!#float#!#varchar
1#!#1.1#!#one
2#!#2.2#!#two
3#!#3.3#!#three
~~END~~


-- Invalid syntax
begin babel_662_proc_2 end
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near 'end' at line 2 and character position 23)~~


babel_662_proc_2
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: procedure babel_662_proc_2() does not exist)~~


-- BABEL-1995
ABC
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: procedure abc() does not exist)~~


-- BABEL-2052
us emaster
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: column "emaster" does not exist)~~


-- BABEL-2067
seelect 1;
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: procedure seelect(integer) does not exist)~~


-- Test stored procedure
sp_executesql N'SELECT ''hello world'''
go
~~START~~
varchar
hello world
~~END~~


DROP TABLE babel_662_table
DROP PROC babel_662_proc_1
DROP PROC babel_662_proc_2
DROP PROC babel_662_proc_3
go
